fix: align styles with mentor requirements (B12, B14, B17, B19)

--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,8 @@ text-align: center;
 }
 .portfolio-text-wrap{
   padding: 32px 16px;
+  border-bottom: 1px solid #e7e9fc;
+
 }
 .portfolio-subtitle{
   margin-bottom: 8px;
@@ -310,7 +312,7 @@ text-align: center;
   background-color: #2e2f42;
   padding: 100px 56px;
 }
-.footer-container{
+.footer-wrapp{
   display: flex;
   flex-direction: column;
   gap: 16px;
